# boarding

./: .gitignore  README.md  pyproject.toml
blog/: linkedin-jupedsim-boarding.md
docs/: compliance-design.md  compliance-plan.md  design-spec.md  groups-design.md  groups-plan.md  heterogeneous-profiles-design.md  heterogeneous-profiles-plan.md  implementation-plan.md  results-compliance.md  results-groups.md  results-heterogeneous.md  results.md
docs/study-output/: compliance_sweep.csv  group_sweep.csv  ranking.csv  ranking_mix.csv  results.csv  results_mix.csv
docs/study-output/trajectories/: back_to_front.sqlite  random.sqlite  steffen_modified.sqlite  steffen_perfect.sqlite  wilma.sqlite
src/boarding/: __init__.py  analysis.py  choreography.py  cli.py  compliance.py  compliancesweep.py  config.py  experiment.py  geometry.py  groups.py  groupsweep.py  methods.py  profiles.py  seat_placement.py  visualize.py
tests/: test_analysis.py  test_boarding_cli.py  test_choreography.py  test_compliance.py  test_compliancesweep.py  test_config.py  test_experiment_smoke.py  test_geometry.py  test_groups.py  test_groupsweep.py  test_methods.py  test_profiles.py  test_seat_placement.py  test_visualize.py
