[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boarding"
version = "0.1.0"
description = "Steffen airplane boarding-method study in JuPedSim (uses jupedsim-scenarios)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mohcine Chraibi" }]
dependencies = [
    "jupedsim>=1.4",
    "jupedsim-scenarios>=0.6",
    "shapely>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
]

[project.scripts]
jps-boarding = "boarding.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
